--- a/demo.html
+++ b/demo.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>animateQueue</title>
 	<link rel="stylesheet" href="css/animate.css">
 	<style>
 		.cnv {
-			height: 600px;
-			width: 600px;
+			height: 100%;
+			width: 100%;
 			border: 1px solid #ccc;
 		}
 
@@ -16,7 +20,7 @@
 			width: 200px;
 			background: #666;
 			margin: auto;
-			margin-top: 200px;
+			margin-top: 100px;
 		}
 
 
