增添停止动画功能

--- a/demo.html
+++ b/demo.html
@@ -46,5 +46,10 @@
 				.add('.run', 'bounceIn')
 				.add('.run', 'fadeInDownBig')
 				.run();
+
+	setTimeout(function () {
+		animateQueue.stop();
+	}, 0);
+	
 </script>
 </html>
