修复stop报错的bug

--- a/demo.html
+++ b/demo.html
@@ -48,8 +48,8 @@
 				.run();
 
 	setTimeout(function () {
-		// animateQueue.stop();
-	}, 0);
+		 animateQueue.stop();
+	}, 3000);
 	
 </script>
 </html>
